# rosprojectNew

./: 502.pptx  nav_path.txt  phantom.sh  readme.md  readme2.md  trajectory.txt
a502_teleop/: CMakeLists.txt  package.xml
a502_teleop/launch/: turtlebot3_teleop_key.launch
a502_teleop/nodes/: getModel.py  joy_to_twist.py  set_link.py
asm_car_asm/config/: control.yaml
asm_car_asm/launch/: control.launch
asm_car_asm/urdf/: asm_car_asm.urdf  asm_car_asm.urdf.xacro  fly_camera.urdf.xacro
devel/: .catkin  local_setup.sh  setup.sh
devel/include/color_depth_msg/: colordepth.h
devel/include/kinova_arm_moveit_demo/: OmniFeedback.h  PhantomButtonEvent.h
devel/include/pan_tilt_msg/: PanTiltCmd.h
devel/lib/a502_teleop/: turtlebot_teleop_joy
devel/lib/file_server/: file_server
devel/lib/kinova_arm_moveit_demo/: motion_plan  phantomPoseTarget  pick_place  test_accuracy  work_scene
devel/lib/kinova_driver/: gripper_command_action_server  joint_trajectory_action_server  kinova_arm_driver  kinova_interactive_control  kinova_tf_updater
devel/lib/pan_tilt_driver/: PanTiltDriverNode  test2
devel/lib/path/: odom2path
devel/lib/pkgconfig/: a502_teleop.pc  asm_car_asm.pc  color_depth_msg.pc  file_server.pc  gazebo_simulation_scene.pc  iqr_4b_description.pc  iqr_4b_moveit_config.pc  iqr_4b_navigation.pc  j2n6s300_ikfast.pc  j2n6s300_moveit_config.pc  j2s6s300_ikfast.pc  j2s6s300_moveit_config.pc  j2s7s300_ikfast.pc  j2s7s300_moveit_config.pc  kinova_arm_moveit_demo.pc  kinova_bringup.pc  kinova_control.pc  kinova_demo.pc  kinova_description.pc  kinova_driver.pc  kinova_gazebo.pc  kinova_msgs.pc  m1n6s300_ikfast.pc  m1n6s300_moveit_config.pc  pan_tilt_bringup.pc  pan_tilt_description.pc  pan_tilt_driver.pc  pan_tilt_msg.pc  path.pc  save_rgbd_from_kinect2.pc  unity_simulation_scene.pc  ur10_e_moveit_config.pc  ur10_moveit_config.pc  ur3_e_moveit_config.pc  ur3_moveit_config.pc  ur5_e_moveit_config.pc  ur5_moveit_config.pc  ur_bringup.pc  ur_description.pc  ur_driver.pc  (+5 more)
devel/lib/save_rgbd_from_kinect2/: save_rgb  save_rgb_key  save_rgbd_from_kinect2  save_rgbd_from_kinect2_new  transfer_rgbd_both  triProcess
devel/share/a502_teleop/cmake/: a502_teleopConfig.cmake
devel/share/asm_car_asm/cmake/: asm_car_asmConfig.cmake
devel/share/color_depth_msg/cmake/: color_depth_msg-msg-extras.cmake  color_depth_msg-msg-paths.cmake  color_depth_msgConfig.cmake
devel/share/file_server/cmake/: file_serverConfig.cmake
devel/share/gazebo_simulation_scene/cmake/: gazebo_simulation_sceneConfig.cmake
devel/share/iqr_4b_description/cmake/: iqr_4b_descriptionConfig.cmake
devel/share/iqr_4b_moveit_config/cmake/: iqr_4b_moveit_configConfig.cmake
devel/share/iqr_4b_navigation/cmake/: iqr_4b_navigationConfig.cmake
devel/share/j2n6s300_ikfast/cmake/: j2n6s300_ikfastConfig.cmake
devel/share/j2n6s300_moveit_config/cmake/: j2n6s300_moveit_configConfig.cmake
devel/share/j2s6s300_ikfast/cmake/: j2s6s300_ikfastConfig.cmake
devel/share/j2s6s300_moveit_config/cmake/: j2s6s300_moveit_configConfig.cmake
devel/share/j2s7s300_ikfast/cmake/: j2s7s300_ikfastConfig.cmake
devel/share/j2s7s300_moveit_config/cmake/: j2s7s300_moveit_configConfig.cmake
devel/share/kinova_arm_moveit_demo/cmake/: kinova_arm_moveit_demo-msg-extras.cmake  kinova_arm_moveit_demo-msg-paths.cmake  kinova_arm_moveit_demoConfig.cmake
devel/share/kinova_bringup/cmake/: kinova_bringupConfig.cmake
devel/share/kinova_control/cmake/: kinova_controlConfig.cmake
devel/share/kinova_demo/cmake/: kinova_demoConfig.cmake
devel/share/kinova_description/cmake/: kinova_descriptionConfig.cmake
devel/share/kinova_driver/cmake/: kinova_driverConfig.cmake
devel/share/kinova_gazebo/cmake/: kinova_gazeboConfig.cmake
devel/share/kinova_msgs/cmake/: kinova_msgs-msg-paths.cmake  kinova_msgsConfig.cmake
devel/share/m1n6s300_ikfast/cmake/: m1n6s300_ikfastConfig.cmake
devel/share/m1n6s300_moveit_config/cmake/: m1n6s300_moveit_configConfig.cmake
devel/share/pan_tilt_bringup/cmake/: pan_tilt_bringupConfig.cmake
devel/share/pan_tilt_description/cmake/: pan_tilt_descriptionConfig.cmake
devel/share/pan_tilt_driver/cmake/: pan_tilt_driverConfig.cmake
devel/share/pan_tilt_msg/cmake/: pan_tilt_msg-msg-paths.cmake  pan_tilt_msgConfig.cmake
devel/share/path/cmake/: pathConfig.cmake
devel/share/save_rgbd_from_kinect2/cmake/: save_rgbd_from_kinect2Config.cmake
devel/share/unity_simulation_scene/cmake/: unity_simulation_sceneConfig.cmake
devel/share/ur10_e_moveit_config/cmake/: ur10_e_moveit_configConfig.cmake
devel/share/ur10_moveit_config/cmake/: ur10_moveit_configConfig.cmake
devel/share/ur3_e_moveit_config/cmake/: ur3_e_moveit_configConfig.cmake
devel/share/ur3_moveit_config/cmake/: ur3_moveit_configConfig.cmake
devel/share/ur5_e_moveit_config/cmake/: ur5_e_moveit_configConfig.cmake
devel/share/ur5_moveit_config/cmake/: ur5_moveit_configConfig.cmake
devel/share/ur_bringup/cmake/: ur_bringupConfig.cmake
devel/share/ur_description/cmake/: ur_descriptionConfig.cmake
devel/share/ur_driver/cmake/: ur_driverConfig.cmake
devel/share/ur_e_description/cmake/: ur_e_descriptionConfig.cmake
devel/share/ur_e_gazebo/cmake/: ur_e_gazeboConfig.cmake
devel/share/ur_msgs/cmake/: ur_msgsConfig.cmake  (+2 more)
iqr_4b_robot-master/iqr_4b_bringup/launch/: 502_mars.launch  fly_cam_mars.launch
kinova-ros-master/: model.urdf
kinova-ros-master/kinova_control/config/: j2n6s300_control.yaml
kinova-ros-master/kinova_control/launch/: kinova_control.launch
kinova-ros-master/kinova_description/urdf/: j2n6s300.xacro  j2n6s300_standalone.xacro
kinova-ros-master/kinova_gazebo/launch/: robot_launch.launch
kinova-ros-master/kinova_moveit/kinova_arm_moveit_demo/: CMakeLists.txt
path/: CMakeLists.txt  package.xml
path/src/: odom2path.cpp
pic/save_rgbd_from_kinect2/: CMakeLists.txt  package.xml
pic/save_rgbd_from_kinect2/src/: TriProcess.h  save_rgb.cpp  save_rgb_key.cpp  save_rgbd_from_kinect2.cpp  triProcess.cpp
unity_simulation_scene/scripts/: mouse_to_joy.py
universal_robot-melodic-devel/ur_gazebo/launch/: ur5.launch
(+47 files in other folders)
